# vitasdk-paf-component

./: README.md  install.sh
include/: paf.h
libpaf/: CMakeLists.txt  build.sh
libpaf/emd2yml/: CMakeLists.txt  build_win.sh  toolchain-x86_64-w64-mingw32.cmake
libpaf/emd2yml/src/: emd2yml.h  main.cpp  sha1.c  sha1.h
paf_samples/samples/paf_build_assert_vitasdk/: sample_plugin.rco
paf_samples/samples/paf_build_assert_vitasdk/cxml/: sample_plugin.xml
paf_samples/samples/paf_build_assert_vitasdk/src/: paf_sample.cpp
paf_samples/samples/paf_sample_advanced_transition/: sample_plugin.rco
paf_samples/samples/paf_sample_advanced_transition/cxml/: sample_plugin.xml
paf_samples/samples/paf_sample_advanced_transition/src/: paf_sample.cpp
paf_samples/samples/paf_sample_cxml_app_icon_simple/: sample_plugin.rco
paf_samples/samples/paf_sample_cxml_app_icon_simple/cxml/: sample_plugin.xml
paf_samples/samples/paf_sample_cxml_busyindicator/: sample_plugin.rco
paf_samples/samples/paf_sample_cxml_busyindicator/cxml/: sample_plugin.xml
paf_samples/samples/paf_sample_cxml_busyindicator/src/: paf_sample.cpp
paf_samples/samples/paf_sample_cxml_button/: sample_plugin.rco
paf_samples/samples/paf_sample_cxml_button/cxml/: sample_plugin.xml
paf_samples/samples/paf_sample_cxml_button/src/: paf_sample.cpp
paf_samples/samples/paf_sample_cxml_check_box/: README.md  sample_plugin.rco
paf_samples/samples/paf_sample_cxml_check_box/cxml/: sample_plugin.xml
paf_samples/samples/paf_sample_cxml_check_box/src/: paf_sample.cpp
paf_samples/samples/paf_sample_cxml_corner_button/: sample_plugin.rco
paf_samples/samples/paf_sample_cxml_corner_button/cxml/: sample_plugin.xml
paf_samples/samples/paf_sample_cxml_corner_button/src/: paf_sample.cpp
paf_samples/samples/paf_sample_cxml_list_view-list_item/: README.md  sample_plugin.rco
paf_samples/samples/paf_sample_cxml_list_view-list_item/cxml/: sample_plugin.xml
paf_samples/samples/paf_sample_cxml_list_view-list_item/src/: paf_sample.cpp
paf_samples/samples/paf_sample_cxml_num_spin/: sample_plugin.rco
paf_samples/samples/paf_sample_cxml_num_spin/cxml/: sample_plugin.xml
paf_samples/samples/paf_sample_cxml_num_spin/src/: paf_sample.cpp
paf_samples/samples/paf_sample_cxml_plane/: sample_plugin.rco
paf_samples/samples/paf_sample_cxml_plane/src/: paf_sample.cpp
paf_samples/samples/paf_sample_cxml_progressbar/: README.md  sample_plugin.rco
paf_samples/samples/paf_sample_cxml_progressbar/cxml/: sample_plugin.xml
paf_samples/samples/paf_sample_cxml_progressbar/src/: paf_sample.cpp
paf_samples/samples/paf_sample_cxml_progressbar_touch/: sample_plugin.rco
paf_samples/samples/paf_sample_cxml_progressbar_touch/cxml/: sample_plugin.xml
paf_samples/samples/paf_sample_cxml_progressbar_touch/src/: paf_sample.cpp
paf_samples/samples/paf_sample_cxml_radio_box-radio_button/: README.md  sample_plugin.rco
paf_samples/samples/paf_sample_cxml_radio_box-radio_button/cxml/: sample_plugin.xml
paf_samples/samples/paf_sample_cxml_radio_box-radio_button/src/: paf_sample.cpp
paf_samples/samples/paf_sample_cxml_rich_text/: sample_plugin.rco
paf_samples/samples/paf_sample_cxml_rich_text/cxml/: sample_plugin.xml
paf_samples/samples/paf_sample_cxml_rich_text/src/: paf_sample.cpp
paf_samples/samples/paf_sample_cxml_slidebar/: sample_plugin.rco
paf_samples/samples/paf_sample_cxml_slidebar/cxml/: sample_plugin.xml
paf_samples/samples/paf_sample_cxml_slidebar/src/: paf_sample.cpp
paf_samples/samples/paf_sample_cxml_speech_balloon/: README.md  sample_plugin.rco
paf_samples/samples/paf_sample_cxml_speech_balloon/cxml/: sample_plugin.xml
paf_samples/samples/paf_sample_cxml_speech_balloon/src/: paf_sample.cpp
paf_samples/samples/paf_sample_cxml_text/: sample_plugin.rco
paf_samples/samples/paf_sample_cxml_text/cxml/: sample_plugin.xml
paf_samples/samples/paf_sample_cxml_text_box/: README.md  sample_plugin.rco
paf_samples/samples/paf_sample_cxml_text_box/cxml/: sample_plugin.xml
paf_samples/samples/paf_sample_cxml_text_box/src/: paf_sample.cpp
paf_samples/samples/paf_sample_cxml_webview/: sample_plugin.rco
paf_samples/samples/paf_sample_cxml_webview/cxml/: sample_plugin.xml
paf_samples/samples/paf_sample_cxml_webview/src/: paf_sample.cpp
paf_samples/samples/paf_sample_feature_image_to_texture/: sample_plugin.rco
paf_samples/samples/paf_sample_feature_image_to_texture/cxml/: sample_plugin.xml
paf_samples/samples/paf_sample_feature_image_to_texture/src/: paf_sample.cpp
paf_samples/samples/paf_sample_feature_input_listener/: sample_plugin.rco
paf_samples/samples/paf_sample_feature_input_listener/cxml/: sample_plugin.xml
paf_samples/samples/paf_sample_feature_input_listener/src/: paf_sample.cpp
paf_samples/samples/paf_sample_feature_screen_orientation/: sample_plugin.rco
paf_samples/samples/paf_sample_feature_screen_orientation/cxml/: sample_plugin.xml
paf_samples/samples/paf_sample_feature_thread_task_job/src/: paf_sample.cpp
paf_samples/scesdk/: main.cpp  paf-vitasdk-scesdk.sln  param.sfx
paf_samples/vitasdk/: CMakeLists.txt  build.sh  main.cpp
(+54 files in other folders)
